--- a/App/MyNewsCast/app/src/main/res/values/strings.xml
+++ b/App/MyNewsCast/app/src/main/res/values/strings.xml
@@ -9,7 +9,6 @@
 
     <string name="action_add_favourite">Add to Favourites</string>
     <string name="action_play_next">Play Next</string>
-    <string name="backdrop_title">MyNewsCast</string>
     <string name="backdrop_subtitle"><Y></Y></string>
 
     <string name="dialog_action_ok">OK</string>
@@ -101,6 +100,5 @@
 
     <string name="id_fmt">User ID: %s</string>
     <string name="email_fmt">Email: %s</string>
-    <string name="textview">MyNewsCast</string>
-    <string name="textview2"><![CDATA[News & Articles]]></string>
+    <string name="news_articles">News and Articles</string>
 </resources>
