--- a/App/MyNewsCast/app/src/main/res/values/strings.xml
+++ b/App/MyNewsCast/app/src/main/res/values/strings.xml
@@ -101,4 +101,6 @@
     <string name="id_fmt">User ID: %s</string>
     <string name="email_fmt">Email: %s</string>
     <string name="news_articles">News and Articles</string>
+    <string name="play_button">play_button</string>
+    <string name="transit_button">transit_button</string>
 </resources>
