--- a/App/MyNewsCast/app/src/main/res/values/strings.xml
+++ b/App/MyNewsCast/app/src/main/res/values/strings.xml
@@ -103,4 +103,9 @@
     <string name="news_articles">News and Articles</string>
     <string name="play_button">play_button</string>
     <string name="transit_button">transit_button</string>
+
+    <string name="back"><![CDATA[<]]></string>
+    <string name="rewind"><![CDATA[<<]]></string>
+    <string name="forward"><![CDATA[>>]]></string>
+    <string name="pause">||</string>
 </resources>
