--- a/App/MyNewsCast/app/src/main/res/values-fr/strings.xml
+++ b/App/MyNewsCast/app/src/main/res/values-fr/strings.xml
@@ -63,7 +63,7 @@
 
     <string name="id_fmt">ID d\'usager: %s</string>
     <string name="email_fmt">Email: %s</string>
-    <string name="news_articles">Nouvelles et articles</string>
+    <string name="news_articles">Nouvelles</string>
     <string name="play_button">play_button</string>
     <string name="transit_button">transit_button</string>
 </resources>
