--- a/App/MyNewsCast/app/src/main/res/values/strings.xml
+++ b/App/MyNewsCast/app/src/main/res/values/strings.xml
@@ -8,8 +8,6 @@
     <string name="action_settings">Settings</string>
 
     <string name="action_add_favourite">Add to Favourites</string>
-    <string name="action_play_next">Play Next</string>
-    <string name="backdrop_subtitle"><Y></Y></string>
 
     <string name="dialog_action_ok">OK</string>
     <string name="dialog_action_cancel">Cancel</string>
@@ -59,8 +57,6 @@
     <string name="status_link_found">Link received, enter email to sign in.</string>
 
     <string name="phone_title_text">Phone Number</string>
-
-
     <string name="firebaseui_status_fmt">Firebase User: %s</string>
     <string name="firebaseui_title_text">FirebaseUI Auth</string>
 
@@ -69,9 +65,9 @@
     <string name="news_articles">News and Articles</string>
     <string name="play_button">play_button</string>
     <string name="transit_button">transit_button</string>
+    <string name="settings_tips">Click for activity restart\nLong click for application restart</string>
+    <string name="french">French</string>
+    <string name="english">English</string>
 
-    <string name="back"><![CDATA[<]]></string>
-    <string name="rewind"><![CDATA[<<]]></string>
-    <string name="forward"><![CDATA[>>]]></string>
-    <string name="pause">||</string>
+    <string name="hello">Hello\n%s</string>
 </resources>
